--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'io.springfox:springfox-swagger2:2.7.0'
+	implementation 'io.springfox:springfox-swagger-ui:2.7.0'
+	//implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	//implementation 'org.springframework.boot:spring-boot-starter-parent:2.4.0'
 }
 
 tasks.named('bootBuildImage') {
